# libsodium

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile.in
builds/qt/: libsodium.pri
builds/xcode/sodium.xcodeproj/: project.pbxproj
builds/xcode/sodium.xcodeproj/xcshareddata/xcschemes/: sodium-static.xcscheme
src/libsodium/: Makefile.in
